testing/tests/ikev2/net2net-psk-icmp-forward/hosts/moon/etc/iptables.rules
*filter

# default policy is DROP
-P INPUT DROP
-P OUTPUT DROP
-P FORWARD DROP

# allow esp
-A INPUT  -i eth1 -p 50 -j ACCEPT
-A OUTPUT -o eth1 -p 50 -j ACCEPT

# allow IKE
-A INPUT  -i eth1 -p udp --sport 500 --dport 500 -j ACCEPT
-A OUTPUT -o eth1 -p udp --dport 500 --sport 500 -j ACCEPT

# allow MobIKE
-A INPUT  -i eth1 -p udp --sport 4500 --dport 4500 -j ACCEPT
-A OUTPUT -o eth1 -p udp --dport 4500 --sport 4500 -j ACCEPT

# allow ssh
-A INPUT  -p tcp --dport 22 -j ACCEPT
-A OUTPUT -p tcp --sport 22 -j ACCEPT

# allow crl fetch from winnetou
-A INPUT  -i eth0 -p tcp --sport 80 -s 192.168.0.150 -j ACCEPT
-A OUTPUT -o eth0 -p tcp --dport 80 -d 192.168.0.150 -j ACCEPT

-A FORWARD -m policy --dir in --pol ipsec -j ACCEPT
-A FORWARD -m policy --dir out --pol ipsec -j ACCEPT

# allow icmp from sun error messages from
# -A FORWARD -i eth0 -p icmp -j ACCEPT
# -A FORWARD -i eth0 -p icmp -m icmp --icmp-type 3 -j ACCEPT

COMMIT
